--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "js-cutter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "marshmallow.js",
   "scripts": {
     "dev": "webpack --mode development",
     "build": "webpack --mode production",
